test/Witgen/object_input_positional_fallback.llzk
// RUN: split-file %s %t
// RUN: not llzk-witgen %t/test.llzk --inputs %t/input.json 2>&1 | FileCheck %s
// RUN: not llzk-witgen %t/test.llzk --inputs %t/input.json --backend=execution-engine 2>&1 | FileCheck %s

//--- test.llzk

module attributes {llzk.lang, llzk.main = !struct.type<@Main>} {
  struct.def @Main {
    struct.member @sum : !felt.type<"babybear"> {llzk.pub}
    function.def @compute(%arg0: !array.type<2 x !felt.type<"babybear">>, %arg1: !felt.type<"babybear">) -> !struct.type<@Main> {
      %self = struct.new : !struct.type<@Main>
      %c0 = arith.constant 0 : index
      %lhs = array.read %arg0[%c0] : !array.type<2 x !felt.type<"babybear">>, !felt.type<"babybear">
      %c1 = arith.constant 1 : index
      %rhs = array.read %arg0[%c1] : !array.type<2 x !felt.type<"babybear">>, !felt.type<"babybear">
      %sum0 = felt.add %lhs, %rhs : !felt.type<"babybear">, !felt.type<"babybear">
      %sum1 = felt.add %sum0, %arg1 : !felt.type<"babybear">, !felt.type<"babybear">
      struct.writem %self[@sum] = %sum1 : !struct.type<@Main>, !felt.type<"babybear">
      function.return %self : !struct.type<@Main>
    }
    function.def @constrain(%self: !struct.type<@Main>, %arg0: !array.type<2 x !felt.type<"babybear">>, %arg1: !felt.type<"babybear">) {
      function.return
    }
  }
}

// CHECK: llzk-witgen error: JSON object inputs require function.arg_name attributes on every Main.compute argument; found none.
// CHECK-SAME: Encountered object key order
// CHECK-SAME: Use a positional JSON array instead.

//--- input.json
{"in": [10, 20], "foo": 7}
